# Lukav

./: .gitignore  IDENTITY.md  README.md  pyproject.toml
python/lukav/: __init__.py  __main__.py  audit_engine.py  cfpb_lookup.py  cli.py  collections_engine.py  desktop.py  dispute_engine.py  ingest.py  ingest_credit_report.py  plaid_client.py
python/lukav/legal/: debt_buyers.py  debt_buyers.yaml  rules.py
python/lukav/legal/rules/: card_act.yaml  fcra.yaml  fdcpa.yaml  state.yaml
python/lukav/legal/templates/: _letterhead.j2  billing_error_notice.j2  cease_contact.j2  collection_cease_contact.j2  collection_validation.j2  collection_workplace_cease.j2  debt_validation.j2  direct_dispute.j2  fcra_dispute.j2  goodwill_letter.j2  method_of_verification.j2  pay_for_delete.j2  (+1 more)
python/lukav/llm/: __init__.py  anthropic_client.py  base.py  claude_client.py  ollama_client.py
python/lukav/models/: collections.py  debt_models.py  findings.py
python/lukav/storage/: db.py  secrets.py
python/lukav/tests/: conftest.py  fakes.py  test_app.py  test_audit.py  test_chunk_filter.py  test_cli.py  test_collections.py  test_ingest.py  test_letters.py  test_llm_isolation.py  test_phase10_regex_dates.py  test_phase12_broader_extract.py  test_phase6_rules.py  test_phase8.py  test_phase9_diagnostics.py  test_routes.py  test_scan_routes.py  test_storage.py  test_tools.py
python/lukav/tools/: _all.py  base.py  debt_audit.py  fdcpa_fcra.py  legal_research.py  plaid_tools.py
python/lukav/web/: app.py
scripts/: Lukav.bat  Lukav.command  e2e.sh  install.ps1  install.sh  smoke.py
(+19 files in other folders)
