[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lukav"
version = "0.1.0"
description = "Personal credit-card debt auditor: discrepancy + FDCPA/FCRA scanner with dispute-letter generation."
requires-python = ">=3.10"
readme = "README.md"
authors = [{name = "Ian"}]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
plaid = ["plaid-python>=24.0"]
secrets = ["keyring>=24.0"]
ocr = ["pytesseract>=0.3", "Pillow>=10.0"]
desktop = ["pywebview>=5.0"]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
lukav = "lukav.cli:main"

[tool.setuptools.packages.find]
where = ["python"]
include = ["lukav*"]

[tool.pytest.ini_options]
testpaths = ["python/lukav/tests"]
addopts = "-q"
